# fraud-detection

./: .env  .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  Makefile  README.md  docker-compose.airflow.yml  docker-compose.kafka.yml  docker-compose.yml  index.html  mkdocs.yml  nx.json  objects.inv  package-lock.json  package.json  pyproject.emulator.toml  pyproject.toml
.github/: ci-settings.yml
.github/workflows/: ci-main.yml  default.yml  docs.yml
.volumes/jmx_exporter/: kafka-broker.yml
dependency-graph/static/: environment.js
docs/: summary.md
getting-start/: index.html
libs/adapters/: README.md  project.json  pyproject.toml
libs/adapters/adapters/api/: rest_api.py
libs/adapters/adapters/controllers/: emulator_controller.py
libs/cliargs/: .coverage  README.md  project.json  pyproject.toml
libs/cliargs/tests/: test_cli.py
libs/ddd_application/: README.md  project.json  pyproject.toml
libs/ddd_application/ddd_application/dtos/: emulation_dto.py
libs/ddd_application/ddd_application/fake_factory/: base_factory.py  device_factory.py  transaction_factory.py  user_profile_factory.py
libs/ddd_application/ddd_application/usecases/: start_emulator.py
libs/domain/: project.json  pyproject.toml
libs/domain/domain/entities/: emulation.py
libs/infrastructure/: .coverage  README.md  project.json  pyproject.toml
libs/infrastructure/infra/: config.py
libs/infrastructure/infra/minio/: client.py
libs/infrastructure/infra/producers/: base_producer.py  kafka_producer.py
libs/infrastructure/tests/: test_config.py
libs/logger/: .coverage  project.json  pyproject.toml
libs/logger/tests/: test_log.py
monitoring/grafana/dashboards/: 14282_rev1_cadvisor.json  18276_rev1_kafka.json
monitoring/grafana/provisioning/dashboards/: dashboard.yml
monitoring/grafana/provisioning/datasources/: prometheus_ds.yml
monitoring/prometheus/: prometheus.yml
monitoring/prometheus/rules/: alert_rules.yml
scripts/: setup.sh
search/: search_index.json
src/airflow-server/: Dockerfile  README.md  project.json  pyproject.toml  requirements.txt
src/airflow-server/src_airflow_server/: hello.py
src/data-emulator/: .env  README.md  project.json  pyproject.toml
src/data-emulator/emulator/: main.py
src/mlflow-server/: Dockerfile  README.md  project.json  pyproject.toml  requirements.txt
src/mlflow-server/src_mlflow_server/: hello.py
summary/: index.html
