[project]
name = "fraud-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
    "ruff>=0.9.10",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-autorefs>=1.4.1",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-include-markdown-plugin>=7.1.5",
    "mkdocs-literate-nav>=0.6.1",
    "mkdocs-material>=9.6.7",
    "mkdocs-material-extensions>=1.3.1",
    "mkdocs-swagger-ui-tag>=0.6.11",
    "mkdocstrings>=0.28.3",
    "mkdocstrings-python>=1.16.3",
    "plantuml-markdown>=3.11.1",
]
