[project]
name = "fraud-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "airflow-server",
  "mlflow-server",
  "data-emulator",
  "logger",
  "cliargs",
  "infrastructure",
  "domain",
  "ddd_application",
  "adapters",
]

[project.scripts]
emulator = "emulator.main:main"

[dependency-groups]
dev = [
  "pre-commit>=4.1.0",
  "ruff>=0.9.10",
  "autopep8>=2.3.1",
  "pytest>=8.3.4",
  "pytest-sugar>=1.0.0",
  "pytest-cov>=6.0.0",
  "pytest-html>=4.1.1"
]
docs = [
  "mkdocs>=1.6.1",
  "mkdocs-autorefs>=1.4.1",
  "mkdocs-gen-files>=0.5.0",
  "mkdocs-include-markdown-plugin>=7.1.5",
  "mkdocs-literate-nav>=0.6.1",
  "mkdocs-material>=9.6.7",
  "mkdocs-material-extensions>=1.3.1",
  "mkdocs-swagger-ui-tag>=0.6.11",
  "mkdocstrings>=0.28.3",
  "mkdocstrings-python>=1.16.3",
  "plantuml-markdown>=3.11.1"
]


[tool.uv.sources.airflow-server]
workspace = true

[tool.uv.sources.mlflow-server]
workspace = true

[tool.uv.sources.logger]
workspace = true

[tool.uv.sources.data-emulator]
workspace = true

[tool.uv.sources.cliargs]
workspace = true

[tool.uv.sources.infrastructure]
workspace = true

[tool.uv.sources.ddd_application]
workspace = true

[tool.uv.sources.adapters]
workspace = true

[tool.uv.sources.domain]
workspace = true


[tool.uv.workspace]
members = [
  "./src/airflow-server",
  "./src/mlflow-server",
  "./src/data-emulator",
  "./libs/logger",
  "./libs/cliargs",
  "./libs/infrastructure",
  "./libs/adapters",
  "./libs/domain",
  "./libs/ddd_application"
]

[tool.hatch.build.targets.wheel]
packages = [
  "./src/airflow-server/src_airflow_server",
  "./src/mlflow-server/src_mlflow_server",
  "./src/data-emulator/emulator"
]

[build-system]
requires = [ "hatchling" ]
build-backend = "hatchling.build"
